libs/bng/test/positive/0031_disconnected_cplx_rxn.bngl
# OK

begin reaction rules
  A.C + B <-> D 0.1, 1
end reaction rules
